# image-auto-arrange

./: README.md  app.py
src/cpp/: main  main.cpp  test_rotate.cpp
src/cpp/approach1/: Makefile  main  main.cpp  run.sh
src/cpp/approach1/lib/ga/: individual.cpp  population.h
src/cpp/approach2/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  test_rotate
src/cpp/approach2/lib/: utils.h
src/cpp/approach2/lib/ga/: individual.h
src/cpp/lib/ga/: individual.cpp  population.cpp
src/ga/: population.py
src/python/: main.py  requirements.txt
src/python/ga/: individual.py
src/python/imgproc/: contour.py
src/python/utils/: fileutils.py
